--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -1,24 +1,34 @@
-name: Devevolpment Pipeline
+name : Development Pipeline 
 
-on:
-  push:
+on: 
+  push: 
     branches:
       - "main"
 
-jobs:
-  lint:
-    runs-on: ubuntu-22.04
+jobs: 
+  lint: 
+    runs-on: ubuntu-22.04 
     steps: 
       - uses: actions/checkout@v3
-        with:
-          fetch.depth: 0
+        with: 
+          fetch-depth: 0
 
       - uses: actions/setup-node@v3
         with:
           node-version: 16
 
+    - name: Get yarn cache directory path
+      id: yarn-cache-dir-path
+      run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+
+    - uses: actions/cache@v3
+      id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+      with:
+        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: | 
+          ${{ runner.os }}-yarn- 
+
       - run: yarn install
 
-      - run: yarn lint
-
-
+      - run: yarn lint 
